--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^5.7.0",
     "mongoose": "^7.5.3",
+    "nodemailer": "^6.9.6",
     "routes": "^2.1.0"
   },
   "devDependencies": {
